@@ -162,6 +162,9 @@ struct GlobalConstants {
     // Segues
     static let AKViewProjectSegue = "ViewProjectSegue"
     static let AKViewTaskSegue = "ViewTaskSegue"
+    // Notifications
+    static let AKStartingTimeNotificationName = "StartingTimeNotification"
+    static let AKClosingTimeNotificationName = "ClosingTimeNotification"
 }
 
 // MARK: Global Enumerations
